--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -43,7 +43,7 @@
 	</filter-mapping>
 
 	<welcome-file-list>
-		<welcome-file>/index</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
 
 </web-app>
