--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
 		<thymeleaf.version>2.1.1.RELEASE</thymeleaf.version>
 	</properties>
 
-	<!-- Test -->
 	<dependencies>
+		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -68,7 +68,6 @@
 			<version>2.6</version>
 			<scope>runtime</scope>
 		</dependency>
-
 
 		<!-- Spring -->
 		<dependency>
@@ -172,8 +171,6 @@
 			<scope>runtime</scope>
 		</dependency>
 
-
-
 		<!-- Provided -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -200,9 +197,7 @@
 			<scope>runtime</scope>
 		</dependency>
 
-
-
-
+		<!-- javassist -->
 		<dependency>
 			<groupId>org.javassist</groupId>
 			<artifactId>javassist</artifactId>
@@ -212,5 +207,25 @@
 	</dependencies>
 	<build>
 		<finalName>kiptanui</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+					<debug>true</debug>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.4</version>
+				<configuration>
+					<failOnMissingWebXml>false</failOnMissingWebXml>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 </project>
