--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -46,4 +46,9 @@
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
 
+	<error-page>
+		<error-code>403</error-code>
+		<location>/index</location>
+	</error-page>
+
 </web-app>
