--- a/src/main/resources/url.properties
+++ b/src/main/resources/url.properties
@@ -4,4 +4,4 @@ url.jquery.js=//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js
 url.jqueryui.css=//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/ui-lightness/jquery-ui.css
 url.jqueryui.js=//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js
 url.fontawesome.css=//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css
-
+url.jqueryform.js=//cdn.jsdelivr.net/jquery.form/3.45/jquery.form.min.js
