--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 		<spring.security.version>3.1.4.RELEASE</spring.security.version>
 		<slf4j.version>1.7.5</slf4j.version>
 		<querydsl.version>3.2.4</querydsl.version>
-		<thymeleaf.version>2.1.1.RELEASE</thymeleaf.version>
+		<thymeleaf.version>2.1.2.RELEASE</thymeleaf.version>
 	</properties>
 
 	<dependencies>
@@ -146,12 +146,12 @@
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jpa</artifactId>
-			<version>1.4.2.RELEASE</version>
+			<version>1.4.3.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<version>4.2.7.SP1</version>
+			<version>4.2.8.Final</version>
 		</dependency>
 		<dependency>
 			<groupId>com.mysema.querydsl</groupId>
@@ -213,7 +213,7 @@
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
-			<version>2.37.1</version>
+			<version>2.38.0</version>
 			<scope>test</scope>
 			<exclusions>
 				<exclusion>
@@ -256,6 +256,11 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.2.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>5.0.1.Final</version>
 		</dependency>
 	</dependencies>
 	<build>
