--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<aspectj.version>1.7.4</aspectj.version>
-		<spring.version>5.2.7.RELEASE</spring.version>
-		<spring.security.version>5.2.10.RELEASE</spring.security.version>
+		<spring.version>5.3.20</spring.version>
+		<spring.security.version>5.7.1</spring.security.version>
 		<slf4j.version>1.7.5</slf4j.version>
 		<querydsl.version>3.3.0</querydsl.version>
 		<thymeleaf.version>2.1.2.RELEASE</thymeleaf.version>
